Fixes dark mode for treeview
Fixes #529

--- a/assets/less/pages.less
+++ b/assets/less/pages.less
@@ -170,7 +170,7 @@
 
 .fancy-layout {
     .pagesTextEditor {
-        border-left: 1px solid @color-form-field-border!important;
+        border-left: 1px solid #cfd7e1 !important;
     }
 }
 
